--- a/templates/registerbot.html
+++ b/templates/registerbot.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <h1>Register bot</h1>
-    <form>
+    <form method="POST" action="/submitbot">
         <label for="botmodel">Bot model</label><input type="text" id = "botmodel" name = "botmodel"><br>
         <label for="length">Build volume length (enter in inches)</label><input type="number" id = "length" name = "length"> <label for="width">width</label><input type="number" id = "width" name = "width"> <label for="height">Height</label><input type="number" id = "height" name = "height"><br>
         <label for="firmware">Firmware version</label><input type="text" id = "firmware" name = "firmware"><br>
         <label for="materials">Supported materials (enter comma separated list)</label><input type="text" id = "materials" name = "materials"><br>
         <label for="notes">Notes</label><input type="text" id = "notes" name = "notes"><br>
-
+        <input type="submit" value="Submit">
     </form>
 </body>
 </html>
