--- a/templates/registerbot.html
+++ b/templates/registerbot.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Register bot</h1>
+    Maybe most of this is NOT entered by the user. Have a "register printer" page 
+    where a user can "detect" the printers and register a new one. If its not in the database already 
+    its displayed. Can get info like firmware etc from protocol. In which case some of this 
+    info is unnecessary. 
+
     <form method="POST" action="/submitbot">
         <label for="botmodel">Bot model</label><input type="text" id = "botmodel" name = "botmodel"><br>
         <label for="length">Build volume length (enter in inches)</label><input type="number" id = "length" name = "length"> <label for="width">width</label><input type="number" id = "width" name = "width"> <label for="height">Height</label><input type="number" id = "height" name = "height"><br>
