--- a/templates/botselected.html
+++ b/templates/botselected.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>Test navigation</h1>
-    <a href="/selectport">Select Port</a><br><br>
 
+<body>
+    <h1>Bot Selected</h1>
+       {{selected_port}}
 </body>
+
 </html>
