fixes (move head needs fix)

--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -3,3 +3,11 @@
 .dropdown{
     cursor: pointer;
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
