--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -1,6 +1,19 @@
 @import url('bootstrap/dist/css/bootstrap.min.css');
 @import url('https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
+:root {
+  --danger-dark: #ff7a87;
+  --danger-light: #f7b5bb;
+  --warning-dark: #ffdd78;
+  --warning-light: #ffedb8;
+  --secondary-dark: #87929c;
+  --secondary-light: #b2b9bf;
+  --primary-dark: #5ea6f2;
+  --primary-light: #b8d4ff;
+  --success-dark: #5cb85c;
+  --success-light: #b8f2b8;
+}
+
 * {
   font-family: 'Public Sans', sans-serif;
 }
