--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -31,8 +31,14 @@ input {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
+  margin-bottom: 20px;
 }
+
+.container h1 {
+  align-self: flex-start;
+  padding-left: 0;
+}
+
 .form-check-label {
   user-select: none;
 }
