--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -14,6 +14,81 @@
   --success-light: #b8f2b8;
 }
 
+body {
+  /* background-color: #9191aa; */
+  background-color: #b9b9b9;
+}
+
+.accordion-button, .accordion-button:not(.collapsed) {
+  background-color: #d8d8d8;
+}
+
+.accordion-item {
+  border: 1px solid #484848;
+}
+
+.btn-primary {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #7561A9;
+  --bs-btn-border-color: #7561A9;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #5E548E;
+  --bs-btn-hover-border-color: #5E548E;
+  --bs-btn-focus-shadow-rgb: 49,132,253;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #51457C;
+  --bs-btn-active-border-color: #51457C;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #7561A9;
+  --bs-btn-disabled-border-color: #7561A9;
+}
+
+.btn-link {
+  color: #7561A9 !important; /* Set the color directly */
+  text-decoration: none !important; /* Add this line */
+  --bs-btn-font-weight: 400;
+  --bs-btn-color: var(--bs-link-color);
+  --bs-btn-bg: transparent;
+  --bs-btn-border-color: transparent;
+  --bs-btn-hover-color: #5E548E; /* new hover color */
+  --bs-btn-hover-border-color: transparent;
+  --bs-btn-active-color: #51457C; /* new active color */
+  --bs-btn-active-border-color: transparent;
+  --bs-btn-disabled-color: #6c757d;
+  --bs-btn-disabled-border-color: transparent;
+  --bs-btn-box-shadow: 0 0 0 #000;
+  --bs-btn-focus-shadow-rgb: 49,132,253;
+}
+
+table {
+  color: #1b1b1b;
+  background-color: #d8d8d8;
+  border: 1px solid #929292 !important; /* Add this line */
+}
+
+.table td, .table th {
+  border-left: none !important;
+  border-right: none !important;
+}
+
+th {
+  background-color: #b9b9b9 !important;
+  border-left: none !important;
+  border-right: none !important;
+}
+
+td, th {
+  border-top: 1px solid #929292 !important;
+  border-bottom: 1px solid #929292 !important;
+  border-left: none !important;
+  border-right: none !important;
+}
+
+.table-striped tbody tr:nth-of-type(odd) {
+  background-color: rgba(0, 0, 0, .05);
+}
+
 * {
   font-family: 'Public Sans', sans-serif;
 }
