--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -99,6 +99,8 @@ table {
   color: #1b1b1b;
   background-color: #d8d8d8;
   border: 1px solid #929292 !important; /* Add this line */
+  width: 100%;
+  border-collapse: collapse;
 }
 
 .table td, .table th {
