--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -95,6 +95,40 @@ body {
   --bs-btn-focus-shadow-rgb: 49,132,253;
 }
 
+.pagination {
+  --bs-pagination-padding-x: 0.75rem;
+  --bs-pagination-padding-y: 0.375rem;
+  --bs-pagination-font-size: 1rem;
+  --bs-pagination-color: #fff;
+  --bs-pagination-bg: #7561A9;
+  --bs-pagination-border-width: var(--bs-border-width);
+  --bs-pagination-border-color: #929292;
+  --bs-pagination-border-radius: var(--bs-border-radius);
+  --bs-pagination-hover-color: #fff;
+  --bs-pagination-hover-bg: #5E548E;
+  --bs-pagination-hover-border-color: #929292;
+  --bs-pagination-focus-color: #fff;
+  --bs-pagination-focus-bg: #51457C;
+  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(49,132,253, 0.25);
+  --bs-pagination-active-color: #fff;
+  --bs-pagination-active-bg: #51457C;
+  --bs-pagination-active-border-color: #929292;
+  --bs-pagination-disabled-color: #525252;
+  --bs-pagination-disabled-bg: #d8d8d8;
+  --bs-pagination-disabled-border-color: #929292;
+  list-style: none;
+}
+
+input[type="checkbox"], input[type="radio"], input[type="text"], input[type="number"], .border-top {
+  background-color: #f4f4f4 !important;
+  border-color: #929292 !important;
+}
+
+input[type="checkbox"]:checked, input[type="radio"]:checked {
+  background-color: #60AEAE !important;
+  border-color: #60AEAE !important;
+}
+
 table {
   color: #1b1b1b;
   background-color: #d8d8d8;
@@ -133,6 +167,19 @@ td, th {
 
 input {
   font-family: 'Public Sans', sans-serif;
+}
+
+.dropdown-menu.show {
+  background-color: #d8d8d8;
+  border: 1px solid #484848;
+}
+
+.dropdown-menu li a:hover {
+  background-color: #c0c0c0; /* Slightly lighter grey */
+}
+
+.dropdown-menu li a:active {
+  background-color: #7561A9; /* Purple */
 }
 
 .dropdown {
