--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -187,3 +187,24 @@ th {
 .btn {
   user-select: none;
 }
+
+.fade-enter-active,
+.fade-leave-active {
+    transition: opacity .5s;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+    opacity: 0;
+}
+
+.fade-enter-to,
+.fade-leave-from {
+    opacity: 1;
+}
+
+.scrollable-filter {
+  height: 550px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
