--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -121,8 +121,8 @@ th {
   visibility: hidden;
   opacity: 0;
   transition:
-  opacity 0.2s linear,
-  visibility 0.2s linear 0.2s;
+    opacity 0.2s linear,
+    visibility 0.2s linear 0.2s;
   width: 200px;
   background-color: #484848;
   color: #dbdbdb;
@@ -165,7 +165,15 @@ th {
   border-color: #484848 !important;
 }
 
-.dp__theme_light,
+.dp__theme_light {
+  background-color: none !important;
+  border-color: #484848 !important;
+  --dp-range-between-dates-background-color: #dddddd !important;
+  --dp-range-between-border-color: #dddddd !important;
+  --dp-hover-color: #c0c0c0 !important;
+  --dp-background-color: #f4f4f4 !important;
+}
+
 .dp__arrow_bottom {
   background-color: #f4f4f4 !important;
   border-color: #484848 !important;
@@ -178,4 +186,36 @@ th {
 .dp__input_icon,
 .dp__clear_icon {
   color: #484848 !important;
+}
+
+.page-item.disabled {
+  user-select: none;
+}
+
+.btn {
+  user-select: none;
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
+
+.fade-enter-to,
+.fade-leave-from {
+  opacity: 1;
+}
+
+.scrollable-filter {
+  height: 550px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.page-of-pages {
+  text-align: center;
 }
