--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
-  background-color: #b9b9b9;
+  background-color: var(--main-background-color, #b9b9b9);
 }
 
 input[type='checkbox'],
