--- a/client/src/assets/base.css
+++ b/client/src/assets/base.css
@@ -21,7 +21,15 @@
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
 
   --main-background-color-light: #b9b9b9;
-    --main-background-color-dark: #333333;
+  --main-background-color-dark: #333333;
+  --primary-light: #7561A9;
+  --primary-dark: #7561A9;
+  --secondary-light: #60AEAE;
+  --secondary-dark: #60AEAE;
+  --color-primary-hover-light: #5e548e;
+  --color-primary-hover-dark: #5e548e;
+  --color-secondary-hover-light: #4f9b9b;
+  --color-secondary-hover-dark: #4f9b9b;
 }
 
 /* semantic color variables for this project */
@@ -37,6 +45,11 @@
   --color-text: var(--vt-c-text-light-1);
 
   --section-gap: 160px;
+  --color-primary: var(--primary-light);
+  --color-secondary: var(--secondary-light);
+  --color-primary-hover: var(--color-primary-hover-light);
+  --color-secondary-hover: var(--color-secondary-hover-light);
+  --color-primary-font-: var(--vt-c-white);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -50,6 +63,12 @@
 
     --color-heading: var(--vt-c-text-dark-1);
     --color-text: var(--vt-c-text-dark-2);
+
+    --color-primary: var(--primary-dark);
+    --color-secondary: var(--secondary-dark);
+    --color-primary-hover: var(--color-primary-hover-dark);
+    --color-secondary-hover: var(--color-secondary-hover-dark);
+    --color-primary-font: var(--vt-c-black);
   }
 }
 
@@ -64,23 +83,21 @@ body {
   min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
-  transition:
-    color 0.5s,
-    background-color 0.5s;
+  transition: color 0.5s,
+  background-color 0.5s;
   line-height: 1.6;
-  font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
+  font-family: Inter,
+  -apple-system,
+  BlinkMacSystemFont,
+  'Segoe UI',
+  Roboto,
+  Oxygen,
+  Ubuntu,
+  Cantarell,
+  'Fira Sans',
+  'Droid Sans',
+  'Helvetica Neue',
+  sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
