--- a/client/src/assets/base.css
+++ b/client/src/assets/base.css
@@ -1,14 +1,14 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --vt-c-white: #ffffff;
-  --vt-c-white-soft: #f8f8f8;
-  --vt-c-white-mute: #f2f2f2;
+  --vt-c-white: #ffffffff;
+  --vt-c-white-soft: #f8f8f8ff;
+  --vt-c-white-mute: #f2f2f2ff;
 
-  --vt-c-black: #181818;
-  --vt-c-black-soft: #222222;
-  --vt-c-black-mute: #282828;
+  --vt-c-black: #181818ff;
+  --vt-c-black-soft: #222222ff;
+  --vt-c-black-mute: #282828ff;
 
-  --vt-c-indigo: #2c3e50;
+  --vt-c-indigo: #2c3e50ff;
 
   --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
   --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
@@ -20,41 +20,73 @@
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
 
-  --main-background-color-light: #b9b9b9;
-  --main-background-color-dark: #333333;
-  --primary-light: #7561A9;
-  --primary-dark: #7561A9;
-  --secondary-light: #60AEAE;
-  --secondary-dark: #60AEAE;
-  --color-primary-hover-light: #5e548e;
-  --color-primary-hover-dark: #5e548e;
-  --color-secondary-hover-light: #4f9b9b;
-  --color-secondary-hover-dark: #4f9b9b;
+  --main-background-color-light: #b9b9b9ff;
+  --main-background-color-dark: #333333ff;
+  --primary-light: #7561A9ff;
+  --primary-dark: #7561A9ff;
+  --secondary-light: #60AEAEff;
+  --secondary-dark: #60AEAEff;
+  --color-primary-hover-light: #5e548eff;
+  --color-primary-hover-dark: #5e548eff;
+  --color-secondary-hover-light: #4f9b9bff;
+  --color-secondary-hover-dark: #4f9b9bff;
+  --color-primary-active-light: #51457cff;
+  --color-primary-active-dark: #51457cff;
+  --color-secondary-active-light: #3e7776ff;
+  --color-secondary-active-dark: #3e7776ff;
+  --color-primary-disabled-light: #9681caff;
+  --color-primary-disabled-dark: #9681caff;
+  --color-secondary-disabled-light: #88d3d3ff;
+  --color-secondary-disabled-dark: #88d3d3ff;
+
+  --user-font: 'Public Sans', sans-serif;
+  --user-font-reversion: 'Public Sans', sans-serif;
+
+  --color-modal-background-light: #b9b9b9ff;
+  --color-modal-background-dark: #464646ff;
+
+  --color-form-background-light: #cdcdcdff;
+  --color-form-background-dark: #323232ff;
+
 }
 
 /* semantic color variables for this project */
-:root {
-  --color-background: var(--main-background-color-light);
-  --color-background-soft: var(--vt-c-white-soft);
-  --color-background-mute: var(--vt-c-white-mute);
+@media (prefers-color-scheme: light) {
+  :root {
+    --color-background: var(--main-background-color-light);
+    --color-background-reversion: var(--main-background-color-light);
+    --color-background-soft: var(--vt-c-white-soft);
+    --color-background-mute: var(--vt-c-white-mute);
 
-  --color-border: var(--vt-c-divider-light-2);
-  --color-border-hover: var(--vt-c-divider-light-1);
+    --color-border: var(--vt-c-divider-light-2);
+    --color-border-hover: var(--vt-c-divider-light-1);
 
-  --color-heading: var(--vt-c-text-light-1);
-  --color-text: var(--vt-c-text-light-1);
+    --color-heading: var(--vt-c-text-light-1);
+    --color-text: var(--vt-c-text-light-1);
 
-  --section-gap: 160px;
-  --color-primary: var(--primary-light);
-  --color-secondary: var(--secondary-light);
-  --color-primary-hover: var(--color-primary-hover-light);
-  --color-secondary-hover: var(--color-secondary-hover-light);
-  --color-primary-font-: var(--vt-c-white);
+    --section-gap: 160px;
+    --color-primary: var(--primary-light);
+    --color-primary-reversion: var(--primary-light);
+    --color-secondary: var(--secondary-light);
+    --color-secondary-reversion: var(--secondary-light);
+    --color-primary-hover: var(--color-primary-hover-light);
+    --color-secondary-hover: var(--color-secondary-hover-light);
+    --color-primary-font: var(--vt-c-white);
+    --color-secondary-font: var(--vt-c-white);
+    --color-primary-active: var(--color-primary-active-light);
+    --color-secondary-active: var(--color-secondary-active-light);
+    --color-primary-disabled: var(--color-primary-disabled-light);
+    --color-secondary-disabled: var(--color-secondary-disabled-light);
+
+    --color-modal-background: var(--color-modal-background-light);
+    --color-form-background: var(--color-form-background-light);
+  }
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --color-background: var(--main-background-color-dark);
+    --color-background-reversion: var(--main-background-color-dark);
     --color-background-soft: var(--vt-c-black-soft);
     --color-background-mute: var(--vt-c-black-mute);
 
@@ -65,10 +97,20 @@
     --color-text: var(--vt-c-text-dark-2);
 
     --color-primary: var(--primary-dark);
+    --color-primary-reversion: var(--primary-dark);
     --color-secondary: var(--secondary-dark);
+    --color-secondary-reversion: var(--secondary-dark);
     --color-primary-hover: var(--color-primary-hover-dark);
     --color-secondary-hover: var(--color-secondary-hover-dark);
-    --color-primary-font: var(--vt-c-black);
+    --color-primary-font: var(--vt-c-black-mute);
+    --color-secondary-font: var(--vt-c-black-mute);
+    --color-primary-active: var(--color-primary-active-dark);
+    --color-secondary-active: var(--color-secondary-active-dark);
+
+    --color-primary-disabled: var(--color-primary-disabled-dark);
+    --color-secondary-disabled: var(--color-secondary-disabled-dark);
+    --color-modal-background: var(--color-modal-background-dark);
+    --color-form-background: var(--color-form-background-dark);
   }
 }
 
